setState()-Реализация фильтра

--- a/package.json
+++ b/package.json
@@ -27,5 +27,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "main": "index.js",
+  "repository": "https://github.com/Shatki/ReactLearnToDoApp.git",
+  "author": "Dmitriy Seliverstov ",
+  "license": "GNU 3"
 }
